syntax = "proto3";
package proto;
service Raft {
    rpc AppendEntriesRPC (AppendEntries) returns (AppendEntriesResult);
    rpc RequestVoteRPC (RequestVote) returns (RequestVoteResult);
}
message Entry {
    bytes data = 1;
}

message AppendEntries {
    int64 term = 1;
    string leaderId = 2;
    int64 prevLogIndex = 3;
    repeated Entry entries = 4;
    int64 leaderCommit = 5;
}

message AppendEntriesResult {
    int64 term = 1;
    bool success = 2;
}

message RequestVote {
    int64 term = 1;
    int64 candidateId = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
}

message RequestVoteResult {
    int64 term = 1;
    bool voteGranted = 2;
}